阶段二-任务一完成

--- a/cssXZ/Stage-two/denglu/style.css
+++ b/cssXZ/Stage-two/denglu/style.css
@@ -47,6 +47,7 @@ main form {
     margin: 0 -8rem 0 0;
     width: 100%;
     border: 0rem;
+    outline: none;
     font-size: 1.4rem;
     line-height: 5rem;
 }
