阶段二任务4修改

--- a/cssXZ/Stage-two/gamejingling/css/result.css
+++ b/cssXZ/Stage-two/gamejingling/css/result.css
@@ -36,9 +36,10 @@ header {
 
 main {
     position: absolute;
-    top: 4rem;
+    top:2.5rem;
     left: 0;
     right: 0;
+    padding-top: 1.5rem;
     background-color: #29bde0;
 }
 
@@ -83,7 +84,8 @@ main {
 }
 
 .mygroup-item {
-    margin-left: 2rem;
+    width: 80vw;
+    margin: 0 auto;
 }
 
 .day-state {
@@ -103,10 +105,6 @@ main {
     font-size: 1.2rem;
 }
 
-body {
-    background-color: #29bde0;
-}
-
 
 /* skin */
 
@@ -117,7 +115,7 @@ body {
 
 .day-content p {
     letter-spacing: .1rem;
-    font-size: 1rem;
+    font-size:4.2vw;
     color: #a6a6a6;
 }
 
@@ -143,9 +141,9 @@ header {
 }
 .game-data span {
     letter-spacing: .1rem;
-    padding-right: 1.2rem;
+    padding-right: 1rem;
     color: #ffffff;
-    font-size: .9rem;
+    font-size: 4vw;
 }
 
 /* module */
