阶段二任务完成

--- a/cssXZ/Stage-two/gamejingling/css/result.css
+++ b/cssXZ/Stage-two/gamejingling/css/result.css
@@ -99,10 +99,17 @@ main {
 /* global */
 
 .day-count {
-    display: inline-block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin: .2rem 0;
+    width: 100%;
     letter-spacing: .1rem;
     font-size: 1.2rem;
+}
+.day-count .game-time {
+    font-size: .8rem;
+    color: #A7A7A7;
 }
 
 
