--- a/cssXZ/Stage-there/no_responsive/css/jinengshu.css
+++ b/cssXZ/Stage-there/no_responsive/css/jinengshu.css
@@ -1,36 +1,45 @@
 /* main部分开始 */
+
 #main-advantage {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
+    flex-wrap: wrap;
     margin: 0 auto;
     padding: 2rem 0;
     width: 75%;
     max-width: 58rem;
 }
+
 .adv-item {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    margin: 0 1rem;
     width: 11.9999rem;
 }
+
 .adv-item-title {
     padding: 1rem 0 1rem 0;
     font-size: .8em;
     font-weight: bold;
 }
+
 .adv-item-content {
     padding: .5rem 0 .5rem 0;
     font-size: .8rem;
     color: #999999;
 }
+
 .adv-item-img {
     padding: 3rem 0 .5rem 0;
 }
+
 #main-state {
     position: relative;
     top: 2.5rem;
+    margin: 0 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -40,17 +49,21 @@
     font-size: .9rem;
     color: #999999;
 }
+
 .icon-people {
     color: #26a26f;
     padding-left: 1rem;
-    background: url(../images/mysp.png) no-repeat left 28%; 
+    background: url(../images/mysp.png) no-repeat left 28%;
 }
+
 #state-learning {
     margin: .5rem 0;
 }
+
 #sate-working {
     margin: .5rem 0;
 }
+
 #main-state span {
     margin: .5rem 0;
 }
@@ -59,20 +72,134 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 3rem 0 5rem 0;
 }
+
+.main-title {
+    text-align: center;
+    font-size: .9rem;
+    font-weight: bold;
+    margin: 2rem 0;
+}
+
+#learn-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #learn-action ul {
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
 }
+
 #learn-action ul li {
     display: flex;
     align-items: center;
-    width: 16rem;
+    margin: 0 1rem;
+    width: 14rem;
+    height: 4.5rem;
+    font-size: .75rem;
+    color: #999999;
+}
+
+#learn-action ul li p {
+    margin: 1.5rem .5rem 1.5rem 1rem;
+    width: 8rem;
+}
+
+#main-display {
+    padding: 2rem 0;
+}
+
+#display-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    width: 75%;
+}
+
+.display-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1rem .5rem;;
+    padding: 2rem 2rem;
+    width: 15rem;
+    min-width: 15rem;
+    box-shadow: 2px 3px 10px #f1f1f1;
+}
+
+.display-item img {
+    min-width: 5rem;
+    ;
+}
+
+.display-identity {
+    padding: 2rem 0;
+    font-size: .9rem;
+}
+
+.display-content {
     font-size: .8rem;
     color: #999999;
 }
-#learn-action ul li p {
-    margin: 1rem;
-    width: 50%;
+
+#container-img {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    width: 100%;
+}
+
+#container-img img {
+    max-width: 95%;
+    height: auto;
+}
+
+#container-img a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 13rem;
+    height: 8rem;
+    box-shadow: 2px 3px 10px #f1f1f1;
+}
+
+#container-img a:hover {
+    box-shadow: 3px 3px 10px #999999;
+}
+
+#list-groups {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.link-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-left: 1rem;
+}
+.link-list ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.link-list li {
+    margin: .5rem 1.5rem .5rem 0;
+    list-style: disc;
+    font-size: .8rem;
+    color: #999999;
 }
 /* main部分结束 */
 
@@ -81,26 +208,32 @@
 
 
 /* 技能树主页图标开始 */
-#icon-efficiency, #icon-standard, #icon-social{
+
+#icon-efficiency, #icon-standard, #icon-social {
     width: 3rem;
     height: 2.7rem;
     background: url(../images/mysp.png) no-repeat;
     background-size: 90%;
 }
+
 #icon-efficiency {
-    background-position: .5rem 53%; 
+    background-position: .5rem 53%;
 }
+
 #icon-standard {
-    background-position: .15rem 76%; 
+    background-position: .15rem 76%;
 }
+
 #icon-social {
-    background-position: .15rem 99%; 
+    background-position: .15rem 99%;
 }
+
 .learn-round {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 3.5rem;
+    min-width: 3.5rem;
     height: 3.5rem;
     border: 1px solid #999999;
     box-shadow: 0 1px 4px #999;
@@ -108,11 +241,34 @@
     font-size: .9rem;
     color: #26a26f;
 }
+
 .learn-next {
     width: 1rem;
+    min-width: 1rem;
     height: 1rem;
+    min-height: 1rem;
     background: url(../images/mysp.png) no-repeat;
     background-size: 270%;
     background-position: left 36%;
 }
+#point {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+
+}
+.display-point {
+    margin: 1rem .1rem;
+    width: .7rem;
+    height: .7rem;
+    border-radius: 50%;
+    background-color: #ffffff;
+    box-shadow: 2px 3px 10px #DBDBDB;
+}
+
+.getthis {
+    background-color: #26a26f;
+}
 /* 技能树主页图标结束 */
+
