任务八修改

--- a/cssXZ/Stage-three/no-responsive/css/companylist.css
+++ b/cssXZ/Stage-three/no-responsive/css/companylist.css
@@ -55,7 +55,7 @@ aside {
 
 article {
     width: 40rem;
-    margin: 1rem 1rem 2rem 1rem;
+    margin: 0 1rem 2rem 1rem;
     box-shadow: 0 1px 5px #A8A8A8;
     font-size: .8rem;
     color: #999999;
