--- a/cssXZ/Stage-three/reaponaive/css/media-base.css
+++ b/cssXZ/Stage-three/reaponaive/css/media-base.css
@@ -1,5 +1,101 @@
+.not-mobile {
+    display: none;
+}
+
+
 /* 页面header部分开始 */
 
+
+/* --------------service部分-------- */
+
+#service {
+    padding: .25rem 0;
+    height: auto;
+    background-color: #ffffff;
+}
+
+.alldis {
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    width: 95%;
+}
+
+#contact {
+    text-align: right;
+}
+
+#tel {
+    font-size: .65rem;
+    color: #29b078;
+}
+
+
+/* --------------service部分-------- */
+
+
+/* ------------响应式菜单------------ */
+
+nav {
+    background-color: #29b078;
+}
+
+.menu-mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    height: 3rem;
+    width: 90%;
+    border-bottom: .1rem solid #999999;
+}
+
+#mob-home-logo {
+    width: 10rem;
+}
+
+#mob-nav-step {
+    font-size: 1.6rem;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+#menu-list {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .3rem 0;
+    font-size: 1rem;
+    background-color: #29b078;
+    z-index: -999;
+}
+
+#menu-list li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: .5rem;
+    width: 100%;
+    cursor: pointer;
+}
+
+#menu-list li:hover {
+    background-color: #13704A;
+}
+
+#menu-list li a {
+    letter-spacing: .25rem;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+
+/* ------------响应式菜单------------ */
 
 
 /* 页面header部分结束 */
@@ -23,33 +119,42 @@ footer {
     padding: .4rem 0;
     max-width: 59rem;
 }
+
 .footer-title {
     margin: 1rem 0;
 }
+
 .footer-item {
     margin: .7rem 0;
 }
+
 #footer-content a {
     margin: 0 .6rem;
     color: #ffffff;
 }
+
 .footer-title {
     font-size: .8rem;
 }
+
 .footer-item {
     font-size: .7rem;
 }
+
 #footer-app {
     margin-right: 5.5rem;
 }
+
 #footer-weixin {
     margin-left: 1rem;
     margin-right: 2rem;
 }
+
 #footer-weixin img {
     width: 4.6rem;
     height: 4.6rem;
 }
+
 #footer-copyright {
     text-align: center;
     line-height: 1.2rem;
@@ -57,6 +162,8 @@ footer {
     font-size: .628rem;
     border-top: 0.1rem solid #32c086;
 }
+
+
 /* 页面footer部分结束 */
 
 
