任务十三完成

--- a/cssXZ/Stage-four/task-3/gamejingling/sass/discover.scss
+++ b/cssXZ/Stage-four/task-3/gamejingling/sass/discover.scss
@@ -1,13 +1,7 @@
 
 /* layout */
 
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
-}
+
 
 .head-title {
     display: flex;
@@ -101,7 +95,6 @@ footer {
     left: 0;
     right: 0;
     height: 5rem;
-    background-color: #29bde0;
     z-index: 999;
 }
 
@@ -112,7 +105,16 @@ footer {
 
 
 /* global */
-
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+}
+footer {
+    background-color: #29bde0;
+}
 
 /* skin */
 
